k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-links-deployment
  labels:
    app: smart-links
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smart-links
  template:
    metadata:
      labels:
        app: smart-links
    spec:
      containers:
        - name: smart-links-container
          image: ghcr.io/krotname/smart-links:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
