k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-links-service
  labels:
    app: smart-links
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: smart-links
